# Kutils

./: .gitignore  LICENSE  README.md  deadlinkcheck.py  fansites.py  fansites.txt  setup.cfg
kutils/: __init__.py  __main__.py
kutils/scripts/: fansites.py  fansites.txt  sheetfunctions.py
kutils/sheets/: __init__.py  sheetfunctions.py  sheetfunctionstest.py
kutils/twitter/: __init__.py  fansites.py  purerequests.py
kutils/utils/: __init__.py
kutils/youtube/: __init__.py  deadlinkcheck.py  filtering.py
src/depr-spreadsheets/: spreadsheets-gplug.py  spreadsheets.py  spreadsheetsgspread.py
src/sheets/: sheetfunctions.py
src/twitter/: fansites.py  purerequests.py
src/youtube/: deadlinkcheck.py
