[metadata]
# pep 440 compliance
name = kutils
version = 0.0.4mbf
author = Gaurav Bhatnagar
author_email = gbhatnagar@berkeley.edu
description = An assortment of utilities to manage data important to online K-pop communities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mech-a/Kutils
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6